Modals for pre-registering with needs and offers

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -17,7 +17,7 @@
           %h3.home-where.home-intro-text ..where neighbours are helping each other
         =link_to_slug('Find out more', :about, :class=>"illustration-link")  
         =link_to_slug('Find out more', :about, :class=>"home-cta home-cta-about")
-        =link_to "Get involved", "#sign-up-popup", :class=>"home-cta home-cta-get-involved", :"data-toggle"=>"modal"
+        =link_to "Get involved", "#pre-register", :class=>"home-cta home-cta-get-involved", :"data-toggle"=>"modal"
 
 
 .container
