--- a/app/views/layouts/logged_out/_header.html.haml
+++ b/app/views/layouts/logged_out/_header.html.haml
@@ -10,7 +10,7 @@
           -else
             =link_to "Neighbours Can Help", "/", :class=>"logo-intro-link"
           
-        =link_to "Get involved", "#sign-up-popup", :class=>"cta-intro", :"data-toggle"=>"modal"
+        =link_to "Get involved", "#pre-register", :class=>"cta-intro", :"data-toggle"=>"modal"
         
         %ul.nav.nav-intro.unstyled                
           -if @neighbourhood   
