--- a/app/views/pre_registrations/create.js.erb
+++ b/app/views/pre_registrations/create.js.erb
@@ -1,5 +1,5 @@
 <%if @redirect_url.present?%>
 window.location = '<%=@redirect_url%>';
 <%else%>
-$('#sign-up-popup-preregister').html('<%=escape_javascript(render("modals/preregister_form"))%>');
+$('#pre-register-signup').html('<%=escape_javascript(render("pre_registrations/modals/signup"))%>');
 <%end%>	
