--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -642,7 +642,6 @@ border-bottom-color: #b08193;
   padding: 2px 0;
   width: 100%;
   text-align: center;
-
 }
 .list-image a:hover {
   text-decoration: none;
@@ -1556,7 +1555,9 @@ a.cta-small {
   margin-top: 30px;
   margin-bottom: 20px;
 }
+
 /*========== preregister modal form ==========*/
+
 .preregister-form .control-label {
   float: left;
   display: block;
@@ -1573,9 +1574,19 @@ a.cta-small {
  margin: 10px 20px; 
  font-size: 14px;
 }
-
+.modal-body .call-to-action {
+  width: 60%;
+}
+.modal-footer .cta-intro {
+  margin-top: 0;
+}
+.modal-body #need_need_to_know_by_input.radio .help-icon {
+  right: inherit;
+  left: 160px;
+}
 
 /*========== preregistering pages ==========*/
+
 .your-location-title {
   font-size: 36px;
 }
