--- a/app/views/neighbourhoods/show.html.haml
+++ b/app/views/neighbourhoods/show.html.haml
@@ -30,7 +30,7 @@
             %h3.home-where.home-intro-text=neighbourhood_snippet_text(:mission_statement, "..where neighbours are helping each other")
           =link_to_slug('Find out more', :about, :class=>"illustration-link")  
           =link_to_slug('Find out more', :about, :class=>"home-cta home-cta-about")
-          =link_to "Get involved", "#sign-up-popup", :class=>"home-cta home-cta-get-involved", :"data-toggle"=>"modal"
+          =link_to "Get involved", "#pre-register", :class=>"home-cta home-cta-get-involved", :"data-toggle"=>"modal"
 
 .container
   .home-help-links
@@ -84,7 +84,7 @@
       -if current_user
         =link_to "I'd like some help", new_need_path, :class=>"btn call-to-action primary"
       -else              
-        =link_to "I'd like some help", '#sign-up-popup', :class=>"btn call-to-action primary", :"data-toggle"=>"modal"
+        =link_to "I'd like some help", '#pre-register-need', :class=>"btn call-to-action primary", :"data-toggle"=>"modal"
 
     .span6
       %h2 Neighbours who need help
@@ -112,5 +112,5 @@
       -if current_user
         =link_to "I'd like to offer some help", new_general_offer_path, :class=>"btn call-to-action"
       -else              
-        =link_to "I'd like to offer some help", '#sign-up-popup', :class=>"btn call-to-action", :"data-toggle"=>"modal"
+        =link_to "I'd like to offer some help", '#pre-register-general-offer', :class=>"btn call-to-action", :"data-toggle"=>"modal"
       
