--- a/app/views/user_mailer/pre_register_thank_you.text.erb
+++ b/app/views/user_mailer/pre_register_thank_you.text.erb
@@ -1,10 +1,10 @@
-Dear <%=@pre_registration.name%>,
+Dear <%=@pre_register_user.first_name%>,
 
 Thank you for registering your interest in <%=Settings.site_name%>! Your support means a lot to us and we are very grateful for it! With your help, we hope to make communities and neighbourhoods all over the country stronger and more neighbourly.
 
 <%=Settings.site_name%> is going live at different times in different streets, depending on when there are enough of your neighbours online to help you. So any help you can give by telling your friends and neighbours about <%=Settings.site_name%> will be much appreciated! You can find us on Facebook <%=Settings.facebook_url%> and Twitter <%=Settings.twitter_url%>
 
-When there are enough neighbours in <%=@pre_registration.area%> to make helping and asking for help possible, we will switch your street and surrounding area live and let you and all your neighbours know about it.
+When there are enough neighbours in <%=@pre_register_user.city%> to make helping and asking for help possible, we will switch your street and surrounding area live and let you and all your neighbours know about it.
 
 Please feel free to contact us for any information and we thank you for any comments you might give on our developing website <%=feedback_url%>
 
