--- a/app/views/pre_registrations/modals/_general_offer.html.haml
+++ b/app/views/pre_registrations/modals/_general_offer.html.haml
@@ -1,4 +1,4 @@
-=semantic_form_for(@general_offer ||= GeneralOffer.new) do |f|
+=semantic_form_for(@general_offer ||= GeneralOffer.new, :remote => true) do |f|
   .modal-header
     %button{:type=>"button", :class=>"close", :"data-dismiss"=>"modal"} ×
     %h3 What can you offer help with?
