Change all ‘Get Involved’ buttons to ‘Join Now’

--- a/app/views/modals/_preregister_popup.html.haml
+++ b/app/views/modals/_preregister_popup.html.haml
@@ -10,7 +10,7 @@
     %button{:type=>"button", :class=>"close", :"data-dismiss"=>"modal"}
       ×
     %h3
-      Get involved
+      Join now
     .modal-body
       %p.popup-intro
         =neighbourhood_snippet_text(:preregister_popup, "Here is some text explaining what happens next. This will be edited by John.")
