--- a/app/views/neighbourhoods/show.html.haml
+++ b/app/views/neighbourhoods/show.html.haml
@@ -30,7 +30,7 @@
             %h3.home-where.home-intro-text=neighbourhood_snippet_text(:mission_statement, "..where neighbours are helping each others")
           =link_to_slug('Find out more', :about, :class=>"illustration-link")  
           =link_to_slug('Find out more', :about, :class=>"home-cta home-cta-about")
-          =link_to "Get involved", "#sign-up-popup", :class=>"home-cta home-cta-get-involved", :"data-toggle"=>"modal"
+          =link_to "Join now", "#sign-up-popup", :class=>"home-cta home-cta-get-involved", :"data-toggle"=>"modal"
           =link_to "Create a group", groups_path, :class=>"home-cta-groups"
 
 .container
