--- a/app/views/wireframes/_sign_up_popup.html.haml
+++ b/app/views/wireframes/_sign_up_popup.html.haml
@@ -7,7 +7,7 @@
   .modal-body
     .new-message-form
       %p.popup-intro
-        Enter your details below to get involved.
+        Enter your details below to join now.
         
         %form.form-horizontal
           .control-group
