--- a/app/views/modals/_preregister_form.html.haml
+++ b/app/views/modals/_preregister_form.html.haml
@@ -4,11 +4,11 @@
     %button{:type=>"button", :class=>"close", :"data-dismiss"=>"modal"}
       ×
     %h3
-      Get involved
+      Join now
   .modal-body
     .preregister-form
       %p.popup-intro
-        =neighbourhood_snippet_text(:preregister_popup_intro, "Enter your details below to get involved.")
+        =neighbourhood_snippet_text(:preregister_popup_intro, "Enter your details below to join now.")
       
         %form.form-horizontal
           .control-group              
