--- a/app/views/needs/show.html.haml
+++ b/app/views/needs/show.html.haml
@@ -88,7 +88,7 @@
                 .row
                   =neighbourhood_snippet_text(:need_cannot_use, "Here is some text explaining why this page be cannot be used. This will be edited by John.")
                 .row
-                  =link_to "Get involved", "#sign-up-popup", :id=>"cta-3", :class=>"cta-intro cta-small", :"data-toggle"=>"modal"
+                  =link_to "Join now", "#sign-up-popup", :id=>"cta-3", :class=>"cta-intro cta-small", :"data-toggle"=>"modal"
               
       %ul.unstyled.need-posts
         =render(:partial => "needs/post", :collection => @need.posts_viewable_by(current_user).order("created_at DESC"))
