--- a/app/views/wireframes/not_in_your_area_nl.html.haml
+++ b/app/views/wireframes/not_in_your_area_nl.html.haml
@@ -23,7 +23,7 @@
             .span12
               %h1.logo-intro
                 =link_to "Neighbours Can Help", "/", :class=>"logo-intro-link"
-              =link_to "Get involved", "#sign-up-popup", :class=>"cta-intro", :"data-toggle"=>"modal"
+              =link_to "Join now", "#sign-up-popup", :class=>"cta-intro", :"data-toggle"=>"modal"
               %ul.nav.nav-intro.unstyled                
                 %li=link_to "About", "/wireframes/home", :class=>"intro-nav-link-about intro-nav-link"
                 %li=link_to "How it works", "#how-it-works", :class=>"intro-nav-link-how intro-nav-link"
