Nest general_offer and need forms in pre_registration modal

--- a/app/views/neighbourhoods/_cycled_columns.html.haml
+++ b/app/views/neighbourhoods/_cycled_columns.html.haml
@@ -45,7 +45,7 @@
     -if current_user
       =link_to "I'd like some help", new_need_path, :class=>"btn call-to-action primary"
     -else              
-      =link_to "I'd like some help", '#pre-register-need', :class=>"btn call-to-action primary", :"data-toggle"=>"modal"
+      =link_to "I'd like some help", '#pre-register-signup', :class=>"btn call-to-action primary", :"data-toggle"=>"modal"
 
   .span6
     %h2 Neighbours who need help
@@ -73,4 +73,4 @@
     -if current_user
       =link_to "I'd like to offer some help", new_general_offer_path, :class=>"btn call-to-action"
     -else              
-      =link_to "I'd like to offer some help", '#pre-register-general-offer', :class=>"btn call-to-action", :"data-toggle"=>"modal"
+      =link_to "I'd like to offer some help", '#pre-register-signup', :class=>"btn call-to-action", :"data-toggle"=>"modal"
