--- a/app/views/pre_registrations/_modals.html.haml
+++ b/app/views/pre_registrations/_modals.html.haml
@@ -3,7 +3,7 @@
   :javascript
     $(document).ready(function(){
       $('#pre-register').modal('show');
-    })
+    });        
       
 #pre-register.modal.hide
   .modal-header
@@ -13,14 +13,10 @@
       How would you like to get involved?
   .modal-body
     .center
-      =link_to "I'd like some help", '#pre-register-need', :class=>"btn call-to-action primary", :"data-toggle"=>"modal", :"data-dismiss"=>"modal"
-      =link_to "I'd like to offer some help", '#pre-register-general-offer', :class=>"btn call-to-action", :"data-toggle"=>"modal", :"data-dismiss"=>"modal"
+      =link_to "I'd like some help", '#', :class => "btn call-to-action primary", :id => 'pre-register-need-link'
+      =link_to "I'd like to offer some help", '#', :class => "btn call-to-action", :id => 'pre-register-general-offer-link'
   .modal-footer
-    =link_to "Just sign me up", "#pre-register-signup", :class=>"btn pull-right", :"data-toggle"=>"modal", :"data-dismiss"=>"modal"
+    =link_to "Just sign me up", '#', :class => "btn pull-right", :id => 'pre-register-signup-link'
     
 #pre-register-signup.modal.hide
   =render("pre_registrations/modals/signup")
-#pre-register-need.modal.hide
-  =render("pre_registrations/modals/need")
-#pre-register-general-offer.modal.hide
-  =render("pre_registrations/modals/general_offer")
