--- a/app/views/neighbourhoods/show.html.haml
+++ b/app/views/neighbourhoods/show.html.haml
@@ -31,8 +31,7 @@
           =link_to_slug('Find out more', :about, :class=>"illustration-link")  
           =link_to_slug('Find out more', :about, :class=>"home-cta home-cta-about")
           =link_to "Join now", "#sign-up-popup", :class=>"home-cta home-cta-get-involved", :"data-toggle"=>"modal"
-          =link_to "Create a group", groups_path, :class=>"home-cta-groups"
-
+          =link_to "Create a group", groups_path, :class=>"home-cta home-cta-groups"
 .container
   .row#needs-cycle
     .span6
