Allow creating a need or general offer during pre_registration

--- a/app/views/pre_registrations/modals/_general_offer.html.haml
+++ b/app/views/pre_registrations/modals/_general_offer.html.haml
@@ -11,4 +11,4 @@
         =f.input :radius, :as => :select, :collection => need_radius_options, :include_blank => false, :label => false, :prompt => "Select a broadcast radius", :help => "People who live within this distance from you will hear about your offer", :input_html => {:class => "span6"}
     .modal-footer
       =link_to "Back", "#pre-register", :class=>"btn pull-left", :"data-toggle"=>"modal", :"data-dismiss"=>"modal"
-      =f.commit_button "Tell your neighbours", :button_html => { :class => "btn-primary -pull-right" }
+      =f.commit_button "Next", :button_html => { :class => "btn btn-primary pull-right" }
