--- a/app/views/pre_registrations/modals/_need.html.haml
+++ b/app/views/pre_registrations/modals/_need.html.haml
@@ -21,4 +21,4 @@
                 =need.errors[:deadline].to_sentence
     .modal-footer  
       =link_to "Back", "#pre-register", :class=>"btn pull-left", :"data-toggle"=>"modal", :"data-dismiss"=>"modal"
-      =f.commit_button "Send help request", :button_html => { :class => "btn btn-primary pull-right" }
+      =f.commit_button "Next", :button_html => { :class => "btn btn-primary pull-right" }
