--- a/app/views/needs/show.html.haml
+++ b/app/views/needs/show.html.haml
@@ -66,7 +66,7 @@
               %i.icon-exclamation-sign
               =" #{@need.user} is a new user"
               %p
-                They will not see your offer of help until we have validated their account.
+                They will not be able to respond to your offer of help until we have validated their account.
         .span
           -if current_user && @need.offers.exists?(:user_id => current_user.id)
             %p.mb3
