Remove pre_registrations method on neighbourhood and fix neighbourhoods#new_email

--- a/app/views/neighbourhoods/index.html.haml
+++ b/app/views/neighbourhoods/index.html.haml
@@ -17,8 +17,8 @@
         %td=area.status
         %td=link_to(area.admin.full_name,area.admin) if area.admin
         %td
-          -if !area.pre_registrations.empty?
-            =link_to("Email #{area.pre_registrations.count} unregistered", email_neighbourhood_path(area))
+          -if !area.users.where(:role => 'pre_registration').empty?
+            =link_to("Email #{area.users.where(:role => 'pre_registration').count} unregistered", email_neighbourhood_path(area))
             &middot;
           =link_to("Edit", edit_neighbourhood_path(area))
           &middot;
